Bug 1605265 - Don't include overflow child list when computing outline rect. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D59582